debug-kaniko.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kaniko
  namespace: srvls-test
  labels:
    app: test-kaniko
spec:
  containers:
    - name: kaniko
      image: pprecel/kaniko:debug
      imagePullPolicy: Always
      args:
        - "--dockerfile=/workspace/Dockerfile"
        - "--context=dir:///workspace"
        - "--no-push"
      volumeMounts:
        - mountPath: /workspace
          name: workspace
  restartPolicy: Never
  serviceAccount: serverless-function 
  volumes:
    - name: workspace
      emptyDir: {}
