debug-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-ec2-metadata
  namespace: srvls-test
  labels:
    reason: hotfix
spec:
  podSelector:
    matchLabels:
      serverless.kyma-project.io/managed-by: function-controller
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 169.254.169.254/32
